--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <!-- Fin de la barre de navigation -->
   <section class="presentation">
     <h1 style=" white-space: nowrap;overflow: hidden;  text-overflow: ellipsis;" id="bienv" class="kuniverse">
-      Bienvenue chez K-Universe
+     WELCOME <br> TO <br> K-UNIVERSE
     </h1>
     <br>
     <p>Votre entreprise polyvalente pour la restauration en ligne ,la livraison de repas,la vente d'ustensiles
@@ -146,12 +146,8 @@
         savourez chaque plat en faisant défiler pour explorer toutes nos délicieuses options.</h3>
       <br> <br> <br> <br> <br>
       <div class="row">
-        <!-- Image principale -->
-        <div class="col-lg-6 col-md-12 mb-4">
-          <img style="max-height:748px;" src="img/ecmenu.jpg" alt="Menu" >
-        </div>
         <!-- Contenu défilant -->
-        <div id="idscroller" class="col-lg-6 col-md-12">
+        <div id="idscroller" class="col-lg-12 col-md-12">
           <h3 class="text-dark font-weight-bold"> <strong>Explorer notre menu </strong></h3>
           <div  class="menu-scroll">
             <!-- Plat 1 -->
@@ -428,7 +424,8 @@
     </div>
   </section>
   <div class="container" >
-  <p style="text-align: center;" > NB: Notre site est encore en cours de développement .Certaines fonctionnalités telles <br>que les formulaires de commandes et d'Inscription ne sont pas encore disponibles.Merci de votre compréhension !</p>
+  <p style="text-align: center;" > NB: Notre site est encore en cours de développement .Certaines fonctionnalités telles <br>que les formulaires de commandes et d'Inscription ne sont pas encore disponibles.Merci de votre compréhension ! 
+  Pour plus d'infos <a href="#contact">CONTACTEZ-NOUS</a></p>
   </div>
   <!-- FORMULAIRE DE COMMANDE -->
   <section id="comm" class="order-form-section">
@@ -558,10 +555,10 @@
               <i class="fas fa-envelope" style="font-size: 24px;"></i>
               <p class="contact-text">algoubaskissou@icloud.com</p>
             </div>
-            <div class="contact-item">
+            <div id="contact" class="contact-item">
               <i class="fas fa-phone" style="font-size: 24px;"></i>
-              <p class="contact-text">+227 85 79 79 56</p>
-              <p class="contact-text">+227 86 47 30 69</p>
+              <p style="color: black;" class="contact-text">+227 85 79 79 56</p>
+              <p  style="color: black;" class="contact-text">+227 86 47 30 69</p>
             </div>
           </div>
           <!-- Section Suivez-nous -->
@@ -584,7 +581,7 @@
           <div data-aos="fade-down-right class=" col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 data-aos="fade-down-right">
 
             <p style="text-align: center;">© 2024 Tous droits réservés. <br><strong>K-Universe</strong></p>
-            <p style="text-align: center;">Design par <a href="#" class="text-dark">K-Universe</a></p>
+            <p style="text-align: center;">Designed by  <a href="#" class="text-dark">K-Universe</a></p>
 
           </div>
         </div>
