--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </header>
   <!-- Fin de la barre de navigation -->
   <section class="presentation">
-    <h1 style=" white-space: nowrap;overflow: hidden;  text-overflow: ellipsis;" id="bienv" class="kuniverse">
+    <h1 style="font-size: 100%; white-space: nowrap;overflow: hidden;  text-overflow: ellipsis;" id="bienv" class="kuniverse">
      WELCOME <br> TO <br> K-UNIVERSE
     </h1>
     <br>
