--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
   </header>
   <!-- Fin de la barre de navigation -->
   <section class="presentation">
-    <h1 style="font-size: 100%; white-space: nowrap;overflow: hidden;  text-overflow: ellipsis;" id="bienv" class="kuniverse">
-     WELCOME <br> TO <br> K-UNIVERSE
+    <h1 style=" white-space: nowrap;overflow: hidden;  text-overflow: ellipsis;" id="bienv" class="kuniverse">
+     K-UNIVERSE
     </h1>
     <br>
     <p>Votre entreprise polyvalente pour la restauration en ligne ,la livraison de repas,la vente d'ustensiles
