--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
   </header>
   <!-- Fin de la barre de navigation -->
   <section class="presentation">
-    <h1 style=" white-space: nowrap;overflow: hidden;  text-overflow: ellipsis;" id="bienv" class="kuniverse">
-     K-UNIVERSE
-    </h1>
+    <div class="container"><h1 style=" white-space: nowrap;overflow: hidden;  text-overflow: ellipsis;" id="bienv" class="kuniverse">
+     Welcome <br>to <br>K-UNIVERSE
+    </h1></div>
     <br>
     <p>Votre entreprise polyvalente pour la restauration en ligne ,la livraison de repas,la vente d'ustensiles
       de patisserie et de cuisine , organisation d'ateliers de formation et diverses prestation de services.
