modification contact text1

--- a/index.html
+++ b/index.html
@@ -584,8 +584,8 @@
             </div>
             <div id="contact" class="contact-item">
               <i class="fas fa-phone" style="font-size: 24px;"></i>
-              <p style="color: black;" class="contact-text">+227 85 79 79 56</p>
-              <p style="color: black;" class="contact-text">+227 86 47 30 69</p>
+              <p style="color: black;">+227 85 79 79 56</p>
+              <p style="color: black;">+227 86 47 30 69</p>
             </div>
           </div>
           <!-- Section Suivez-nous -->
