--- a/index.html
+++ b/index.html
@@ -569,7 +569,8 @@
             <h5 class="text-uppercase mb-4 font-weight-bold">Liens utiles</h5>
             <p><a href="#bienv" class="text-dark">Accueil</a></p>
             <p><a href="#menu" class="text-dark">Menu</a></p>
-            <p><a href="#services" class="text-dark">Services</a></p>
+             <p><a href="#services" class="text-dark">Services</a></p>
+            
           </div>
           <!-- Section Réseaux sociaux -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 text-center" data-aos="fade-down-right">
@@ -582,7 +583,7 @@
               <i class="fas fa-envelope" style="font-size: 24px;"></i>
               <p class="contact-text">algoubaskissou@icloud.com</p>
             </div>
-            <div id="contact" class="contact-item">
+            <div >
               <i class="fas fa-phone" style="font-size: 24px;"></i>
               <p style="color: black;">+227 85 79 79 56</p>
               <p style="color: black;">+227 86 47 30 69</p>
